k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backtest-ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - backtest.casa
    secretName: backtest-tls
  rules:
    - host: backtest.casa
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: backtest-svc
                port:
                  number: 8080
